--- a/yueshipin/res/layout/detail_movie.xml
+++ b/yueshipin/res/layout/detail_movie.xml
@@ -377,7 +377,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
                         android:paddingLeft="8dp"
-                        android:paddingR="3dp"
+                        android:paddingRight="3dp"
                         android:background="@drawable/detail_movie_button"
                         android:drawableRight="@drawable/detailed_movie_related_in_bg"
                         android:gravity="center_vertical"
