--- a/yueshipin/res/layout/dlna_video_play2.xml
+++ b/yueshipin/res/layout/dlna_video_play2.xml
@@ -105,7 +105,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/player_play" />
+                android:background="@drawable/player_play" 
+                android:onClick="OnClickResume" />
 
             <ImageButton
                 android:id="@+id/imageButton3"
