--- a/yueshipin/res/layout/setting.xml
+++ b/yueshipin/res/layout/setting.xml
@@ -66,7 +66,9 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/setting_xinlang"
                 android:gravity="center_vertical|right"
-                android:paddingTop="4dp" >
+                android:paddingTop="4dp" 
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp">
 
                 <CheckBox
                     android:id="@+id/checkBox1"
@@ -81,6 +83,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 android:layout_marginTop="9dp"
                 android:orientation="vertical" >
 
