--- a/yueshipin/res/layout/dlna_video_play2.xml
+++ b/yueshipin/res/layout/dlna_video_play2.xml
@@ -248,5 +248,12 @@
             android:minHeight="37dp" >
         </ListView>
     </RelativeLayout>
-
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" 
+            android:visibility="gone"/>
 </RelativeLayout>
