--- a/yueshipin/res/layout/detail_show.xml
+++ b/yueshipin/res/layout/detail_show.xml
@@ -350,7 +350,7 @@
                             android:onClick="OnClickShowPlay"
                             android:singleLine="true"
                             android:text="加载中..." 
-                            android:gravity="center_vertical"/>
+                            android:gravity="left"/>
 
                         <Button
                             android:id="@+id/show_button1"
@@ -363,7 +363,7 @@
                             android:onClick="OnClickShowPlay"
                             android:singleLine="true"
                             android:text="加载中..."
-                            android:gravity="center_vertical" />
+                            android:gravity="left" />
 
                         <Button
                             android:id="@+id/show_button2"
@@ -376,7 +376,7 @@
                             android:onClick="OnClickShowPlay"
                             android:singleLine="true"
                             android:text="加载中..." 
-                            android:gravity="center_vertical"/>
+                            android:gravity="left"/>
 
                         <Button
                             android:id="@+id/show_button3"
@@ -389,7 +389,7 @@
                             android:onClick="OnClickShowPlay"
                             android:singleLine="true"
                             android:text="加载中..." 
-                            android:gravity="center_vertical"/>
+                            android:gravity="left"/>
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
