liuyang   修改详情页面的字体颜色和点击“顶”操作

--- a/yueshipin/res/layout/detail_movie.xml
+++ b/yueshipin/res/layout/detail_movie.xml
@@ -148,6 +148,7 @@
                     android:layout_below="@+id/button2"
                     android:layout_marginLeft="129dp"
                     android:layout_marginTop="14dp"
+                    android:textColor="@color/grey"
                     android:text="导演：" />
 
                 <TextView
@@ -157,6 +158,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_below="@+id/textView1"
                     android:layout_marginLeft="129dp"
+                    android:textColor="@color/grey"
                     android:text="主演：" />
 
                 <TextView
@@ -166,6 +168,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_below="@+id/textView2"
                     android:layout_marginLeft="129dp"
+                    android:textColor="@color/grey"
                     android:text="上映：" />
 
                 <TextView
@@ -175,6 +178,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_below="@+id/textView3"
                     android:layout_marginLeft="129dp"
+                    android:textColor="@color/grey"
                     android:text="地区：" />
 
                 <TextView
@@ -185,6 +189,7 @@
                     android:layout_marginTop="14dp"
                     android:layout_toRightOf="@+id/textView1"
                     android:ellipsize="end"
+                    android:textColor="@color/grey"
                     android:singleLine="true" />
 
                 <TextView
@@ -195,6 +200,7 @@
                     android:layout_alignBottom="@+id/textView2"
                     android:layout_toRightOf="@+id/textView2"
                     android:ellipsize="end"
+                    android:textColor="@color/grey"
                     android:singleLine="true" />
 
                 <TextView
@@ -205,6 +211,7 @@
                     android:layout_alignBottom="@+id/textView3"
                     android:layout_alignLeft="@+id/textView6"
                     android:ellipsize="end"
+                    android:textColor="@color/grey"
                     android:singleLine="true" />
 
                 <TextView
@@ -215,6 +222,7 @@
                     android:layout_alignBottom="@+id/textView4"
                     android:layout_toRightOf="@+id/textView4"
                     android:ellipsize="end"
+                    android:textColor="@color/grey"
                     android:singleLine="true" />
             </RelativeLayout>
 
