--- a/yueshipin/res/values/colors.xml
+++ b/yueshipin/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="orange">#FFF48B00</color>
     <color name="darkorange">#FF824600</color>
     <color name="yellow">#FBBB37</color>
+    <color name="listbg">#C57627</color>
 </resources>
